--- a/src/gen/resources/projectBoard.es.yaml
+++ b/src/gen/resources/projectBoard.es.yaml
@@ -1,20 +1,80 @@
-
-- workflow: uni work
-
-- page:
-  - pageName: main
-  - text: Three Column Machine
+- workflow: week 1
 
 - develop:
-    - task: Mails
+    - task: kick off
+    - date: "2022-08-01"
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-03T16:00:00Z"
+
+- workflow: week 2
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-08T16:00:00Z"
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-10T16:00:00Z"
+
+- develop:
+    - task: Fig. 12a
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-12T17:00:00Z"
+
+
+- workflow: week 3
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-15T17:00:00Z"
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-17T17:00:00Z"
+
+- develop:
+    - task: Fig. 15c
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-19T17:00:00Z"
+
+- develop:
+    - task: Zoom
+    - date: "2022-08->20T13:00:00Z"
 
 - develop:
     - date: now
 
+- workflow: week 4
 
 - develop:
-    - task: |
-        GI Group Meeting
-        Microservices
-        enroll
+    - task: Zoom
+    - date: "2022-08-22T17:00:00Z"
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-24T17:00:00Z"
+
+- develop:
+    - task: split system and marking
+
+- develop:
+    - task: execute one step
+
+- develop:
+    - task: Zoom
+    - date: "2022-08-26T17:00:00Z"
+
+- workflow: September
+
+- develop:
+    - task: reachability graph
+
+- develop:
+    - task: display example path
 
